--- a/tool_calling.ipynb
+++ b/tool_calling.ipynb
@@ -347,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
